# realtime_face_censure

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: names.hpp
perf_test/: analyze.py
src/: main_A.cpp  main_B.cpp  main_C.cpp  main_D.cpp
